--- a/index.html
+++ b/index.html
@@ -13,9 +13,8 @@
 <body>
     <!-- new login start -->
     <section class="login-block mt-4">
-        <div class="container">
             <div class="row">
-                <div class="col-md-4 banner-sec">
+                <div class="col banner-sec oculto">
                     <div class="signup__overlay"></div>
                     <div class="banner">
                         <div id="demo" class="carousel slide carousel-fade" data-ride="carousel">
@@ -32,9 +31,9 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-8 login-sec">
+                <div class="col login-sec">
                     <h2 class="text-center">Ingresar</h2>
-                    <div class="login100-form validate-form">
+                    <div class="login100-form validate-form mt-4">
                         <div class="wrap-input100 validate-input">
                             <span class="label-input100">e-mail</span>
                             <input class="input100" id="emailA" type="email" name="email" placeholder="Ingrese su e-mail">
@@ -55,17 +54,16 @@
 
                         <div class="container-login100-form-btn">
                             <div class="wrap-login100-form-btn">
-                                <button onclick="acceso()" class="btn btn-primary btn-block mr-2">
+                                <button onclick="acceso()" class="btn btn-primary btn-block mt-4">
                                     Ingresar
                                 </button>
-                                <a href="registro.html" class="btn btn-dark mr-2 btn-block" role="button">Registrarse</a>
+                                <a href="registro.html" class="btn btn-dark mt-4 btn-block" role="button">Registrarse</a>
                             </div>
                         </div>
                     </div>
 
                 </div>
             </div>
-        </div>
     </section>
     <!-- new login end -->
 
